# cookiecutter-python

./: .editorconfig  LICENSE  README.md  cookiecutter.json  gen_with_context.py  requirements.txt
.github/workflows/: autobuild.yaml
hooks/: post_gen_project.py  post_remove_unused.py
{{cookiecutter.project_name}}/: .editorconfig  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  log_settings.yaml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test_log.py
{{cookiecutter.project_name}}/tests/: test_log.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/log_set/: init_log.py
