[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.36"
]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
authors =[ { name="{{cookiecutter.author}}" {% if cookiecutter.email != 'None' %} , email="cookiecutter.email" {% endif %} }]
requires-python = ">={{cookiecutter.python_min_version}}"
version = "{{cookiecutter.project_major_version}}.{{cookiecutter.project_minor_version}}.{{cookiecutter.project_patch_version}}"
readme = "README.md"
classifiers = [ "Intended Audience :: Developers", "Operating System :: OS Independent" ,"License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3" ]
