[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "{{cookiecutter.project_slug}}"
authors =[ { name="{{cookiecutter.author}}" {% if cookiecutter.email != 'None' %} , email="cookiecutter.email" {% endif %} }]
requires-python = ">={{cookiecutter.python_min_version}}"
version = "{{cookiecutter.project_major_version}}.{{cookiecutter.project_minor_version}}.{{cookiecutter.project_patch_version}}"
readme = "README.md"
classifiers = [ "Intended Audience :: Developers", "Programming Language :: Python :: 3" ]
dependencies = ["pyyaml"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff~=0.3",
    "pytest~=8.1",
    "pre-commit~=3.7"
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
max-line-length = 100